--- a/Garcia_ENV872_Project.tex
+++ b/Garcia_ENV872_Project.tex
@@ -146,8 +146,6 @@ concentrations were lowest in the summer months and highest in the
 winter months.
 \end{abstract}
 
-\newpage
-
 \tableofcontents 
 
 \section{Setup}\label{setup}
@@ -168,64 +166,70 @@ Wrangling}\label{exploratory-data-analysis-and-wrangling}
 
 \listoftables 
 
-\subsection{\texorpdfstring{``The Effect of Water Temperature on DO
+``Data'' \newpage
+\listoffigures 
+
+\subsubsection{\texorpdfstring{``The Effect of Water Temperature on DO
 Concentrations across
 Oahu''}{The Effect of Water Temperature on DO Concentrations across Oahu}}\label{the-effect-of-water-temperature-on-do-concentrations-across-oahu}
 
-\subsection{\texorpdfstring{``The Effect of pH on DO Concentrations
+\subsubsection{\texorpdfstring{``The Effect of pH on DO Concentrations
 across
 Oahu''}{The Effect of pH on DO Concentrations across Oahu}}\label{the-effect-of-ph-on-do-concentrations-across-oahu}
 
-\subsection{\texorpdfstring{``The Effect of Turbidity on DO
+\subsubsection{\texorpdfstring{``The Effect of Turbidity on DO
 Concentrations across
 Oahu''}{The Effect of Turbidity on DO Concentrations across Oahu}}\label{the-effect-of-turbidity-on-do-concentrations-across-oahu}
 
-\subsection{\texorpdfstring{``The Effect of Salinity on DO
+\subsubsection{\texorpdfstring{``The Effect of Salinity on DO
 Concentrations across
 Oahu''}{The Effect of Salinity on DO Concentrations across Oahu}}\label{the-effect-of-salinity-on-do-concentrations-across-oahu}
 
-\subsection{\texorpdfstring{``Correlation of Oahu Water Quality
+\subsubsection{\texorpdfstring{``Correlation of Oahu Water Quality
 Parameters''}{Correlation of Oahu Water Quality Parameters}}\label{correlation-of-oahu-water-quality-parameters}
 
-\subsection{\texorpdfstring{``Effect of Region on Range of Dissolved
+\subsubsection{\texorpdfstring{``Effect of Region on Range of Dissolved
 Oxygen Concentrations in
 Oahu''}{Effect of Region on Range of Dissolved Oxygen Concentrations in Oahu}}\label{effect-of-region-on-range-of-dissolved-oxygen-concentrations-in-oahu}
 
-\subsection{\texorpdfstring{``The Effect of Sample Date on Dissolved
+\subsubsection{\texorpdfstring{``The Effect of Sample Date on Dissolved
 Oxygen Concentrations in North
 Oahu''}{The Effect of Sample Date on Dissolved Oxygen Concentrations in North Oahu}}\label{the-effect-of-sample-date-on-dissolved-oxygen-concentrations-in-north-oahu}
 
-\subsection{\texorpdfstring{``The Effect of Sample Date on Dissolved
+\subsubsection{\texorpdfstring{``The Effect of Sample Date on Dissolved
 Oxygen Concentrations in South
 Oahu''}{The Effect of Sample Date on Dissolved Oxygen Concentrations in South Oahu}}\label{the-effect-of-sample-date-on-dissolved-oxygen-concentrations-in-south-oahu}
 
-\subsection{\texorpdfstring{``The Effect of Sample Date on Dissolved
+\subsubsection{\texorpdfstring{``The Effect of Sample Date on Dissolved
 Oxygen Concentrations in West
 Oahu''}{The Effect of Sample Date on Dissolved Oxygen Concentrations in West Oahu}}\label{the-effect-of-sample-date-on-dissolved-oxygen-concentrations-in-west-oahu}
 
-\subsection{\texorpdfstring{``The Effect of Sample Date on Dissolved
+\subsubsection{\texorpdfstring{``The Effect of Sample Date on Dissolved
 Oxygen Concentrations in East
 Oahu''}{The Effect of Sample Date on Dissolved Oxygen Concentrations in East Oahu}}\label{the-effect-of-sample-date-on-dissolved-oxygen-concentrations-in-east-oahu}
 
-\subsection{\texorpdfstring{``The Effect of Sample Date on Dissolved
+\subsubsection{\texorpdfstring{``The Effect of Sample Date on Dissolved
 Oxygen Concentrations in
 Oahu''}{The Effect of Sample Date on Dissolved Oxygen Concentrations in Oahu}}\label{the-effect-of-sample-date-on-dissolved-oxygen-concentrations-in-oahu}
 
-\subsection{\texorpdfstring{``The Effect of Sample Date on Water
+\subsubsection{\texorpdfstring{``The Effect of Sample Date on Water
 Temperatures in
 Oahu''}{The Effect of Sample Date on Water Temperatures in Oahu}}\label{the-effect-of-sample-date-on-water-temperatures-in-oahu}
 
-\subsection{\texorpdfstring{``The Effect of Sample Date on pH in
+\subsubsection{\texorpdfstring{``The Effect of Sample Date on pH in
 Oahu''}{The Effect of Sample Date on pH in Oahu}}\label{the-effect-of-sample-date-on-ph-in-oahu}
 
-\subsection{\texorpdfstring{``The Effect of Sample Date on Salinity in
+\subsubsection{\texorpdfstring{``The Effect of Sample Date on Salinity
+in
 Oahu''}{The Effect of Sample Date on Salinity in Oahu}}\label{the-effect-of-sample-date-on-salinity-in-oahu}
+
+\subsubsection{\texorpdfstring{``Comparison of DO, Temperature, and pH
+in
+Oahu''}{Comparison of DO, Temperature, and pH in Oahu}}\label{comparison-of-do-temperature-and-ph-in-oahu}
 
 \newpage
 
-\listoffigures  \newpage
-
-tbls= \#Setup
+\section{Setup}\label{setup-1}
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -397,19 +401,6 @@ Table}\label{create-data-structure-table}
 
 \section{Exploratory Data Analysis and
 Wrangling}\label{exploratory-data-analysis-and-wrangling-1}
-
-They only want to see code for data exploration and wrangling, not for
-data visualization Make sure to write a paragraph discussing whatI did
-to wrangle my data
-
-• Your data exploration section should contain at least five lines of
-code that generate summary information about your dataset (or components
-therein) • Your data exploration section should contain at least three
-graphs • Your statistical modeling section should contain at least three
-tests, including the rationale why you took the approach you did. Ensure
-you have met assumptions of tests or that you justify moving forward
-without meeting assumptions. • Your data visualization section should
-contain at least three graphs.
 
 \subsection{Structure of Water Data}\label{structure-of-water-data}
 
